--- a/scripts/common/templates/moduleInfo.hbs
+++ b/scripts/common/templates/moduleInfo.hbs
@@ -1,1 +1,1 @@
-<div class="input-group moudle-search-bar"><input type="text" class="form-control" placeholder="Enter module code or module name"><span class="input-group-btn"><button class="btn btn-default" type="button">Select</button></span></div>
+<div class='input-group moudle-search-bar'><input type='text' class='form-control' placeholder='Enter module code or module name'><span class='input-group-btn'><button class='btn btn-default' type='button'>Select</button></span></div>
