completed module table basic function

--- a/scripts/common/views/moduleInfo.html
+++ b/scripts/common/views/moduleInfo.html
@@ -7,27 +7,28 @@
 
 <div class='selected-module-info'>
 	<div class="inline">
-		<div class='module-code'>
+		<div class='module-code inline'>
 			<div class="module-info-head">
 				Module Code:
 			</div>
 			<div>
-				{{module-code}}
+				
 			</div>
 		</div>
-		<div class='MC'>
-			{{mc}} MCs
+		<div class='MC inline'>
+			MCs
 		</div>
 	</div>
 	<div class='module-title'>
-		Module Title: {{module-title}}
+		Module Title:
 	</div>
 	<div class="pre-requisites">
 	</div>
 	<div class="preclusion">
+		Preclusions:
 	</div>
 	<div class="add-module">
-		<button class="btn" id="add-module-botton" type="button">Add</button>
+		<button class="btn" id="add-module-button" type="button">Add</button>
 	</div>
 	<div class='semester-history'>
 	</div>
@@ -36,3 +37,5 @@
 		There will be a pre-requisite tree.
 	</div>
 </div>
+
+<!-- <script src="./scripts/moduleInfo/controller/moduleInfoControllerTemp.js"></script> -->
