--- a/styles/main.css
+++ b/styles/main.css
@@ -11,7 +11,6 @@
 
 #module-table {
 	background-color: yellow;
-	height: 500px;
 }
 
 .module-search-bar {
@@ -28,11 +27,25 @@
 	background-color: red;
 }
 
+.pre-requisite-module-tile {
+	border-color: red;
+}
+
+.free-to-swap-module-tile {
+	border-color: blue;
+	background-color: brown;   /*The same as .occupied-module-tile */
+}
+
 .occupied-module-tile {
 	background-color: brown;
 }
 
 .active-module-tile {
+	background-color: green;
+}
+
+/*This should be the same as .active-module-tile  */
+.avaliable-to-replace-module-tile {
 	background-color: green;
 }
 
@@ -48,8 +61,13 @@
 	vertical-align:top;
 }
 
-.semester {
+.children-block {
 	height: 60px;
+	text-align: center;
+}
+
+.semester {
+	height: 63px;
 }
 
 .semester-head {
