linked nus modules to app

--- a/scripts/common/views/moduleInfo.html
+++ b/scripts/common/views/moduleInfo.html
@@ -22,6 +22,8 @@
 	<div class='module-title'>
 		Module Title:
 	</div>
+	<div class="description">
+	</div>
 	<div class="pre-requisites">
 	</div>
 	<div class="preclusion">
