add semester info to myPlan

--- a/scripts/common/views/moduletable.html
+++ b/scripts/common/views/moduletable.html
@@ -1,5 +1,5 @@
 <div class="semester">
-	<div class="semester-head">
+	<div class="semester-head" id="1">
 		Year 1 Sem 1
 	</div>
 	<div class="module-tile empty-module-tile">
@@ -14,7 +14,7 @@
 	<div class="module-tile empty-module-tile">
 	</div>
 </div>
-<div class="semester">
+<div class="semester" id="2">
 	<div class="semester-head">
 		Year 1  Sem 2
 	</div>
@@ -29,7 +29,7 @@
 	<div class="module-tile empty-module-tile">
 	</div>
 </div>
-<div class="semester">
+<div class="semester" id="3">
 	<div class="semester-head">
 		Year 2 Sem 1
 	</div>
@@ -44,7 +44,7 @@
 	<div class="module-tile empty-module-tile">
 	</div>
 </div>
-<div class="semester">
+<div class="semester" id="4">
 	<div class="semester-head">
 		Year 2 Sem 2
 	</div>
@@ -59,7 +59,7 @@
 	<div class="module-tile empty-module-tile">
 	</div>
 </div>
-<div class="semester">
+<div class="semester" id="5">
 	<div class="semester-head">
 		Year 3 Sem 1
 	</div>
@@ -74,7 +74,7 @@
 	<div class="module-tile empty-module-tile">
 	</div>
 </div>
-<div class="semester">
+<div class="semester" id="6">
 	<div class="semester-head">
 		Year 3 Sem 2
 	</div>
@@ -89,7 +89,7 @@
 	<div class="module-tile empty-module-tile">
 	</div>
 </div>
-<div class="semester">
+<div class="semester" id="7">
 	<div class="semester-head">
 		Year 4 Sem 1
 	</div>
@@ -104,7 +104,7 @@
 	<div class="module-tile empty-module-tile">
 	</div>
 </div>
-<div class="semester">
+<div class="semester" id="8">
 	<div class="semester-head">
 		Year 4 Sem 2
 	</div>
