added prerequisite logic

--- a/scripts/common/views/moduleInfo.html
+++ b/scripts/common/views/moduleInfo.html
@@ -49,7 +49,7 @@
 	</div>
 
 	<div class='pre-requisite-tree'>
-		There will be a pre-requisite tree.
+		There might be a pre-requisite tree.
 	</div>
 </div>
 
