added progress bar

--- a/scripts/common/views/progressBar.html
+++ b/scripts/common/views/progressBar.html
@@ -1,5 +1,5 @@
 
-<progress class="progress progress-striped progress-info" id="the-progress-bar" value="10" max="100"></progress>
+<progress class="progress progress-striped progress-info" id="the-progress-bar" value="0" max="100"></progress>
 
 <li class="nav-item dropdown visible-list module-list-1">
     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Lvl 1000</a>
@@ -50,10 +50,5 @@
     </div>
 </li>
 <li class="nav-item dropdown visible-list module-list-7">
-    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Breadth</a>
-    <div class="dropdown-menu scrollable-menu" role="menu">
-      	<a class="dropdown-item fixed-item" id="chosen-7" href="#">Chosen Modules:</a>
-      	<div class="dropdown-divider"></div>
-      	<a class="dropdown-item fixed-item" id="avaliable-7" href="#">Avaliable Modules:</a>
-    </div>
+    <div>UE</div>
 </li>
