improved java for programme info

--- a/scripts/common/views/moduletable.html
+++ b/scripts/common/views/moduletable.html
@@ -1,6 +1,7 @@
 <div class="semester" id="s1">
 	<div class="semester-head">
-		Year 1 Sem 1
+		<p>Year 1</p>
+		<p>Sem 1</p>
 	</div>
 	<div class="module-tile empty-module-tile">
 		
@@ -16,7 +17,8 @@
 </div>
 <div class="semester" id="s2">
 	<div class="semester-head">
-		Year 1  Sem 2
+		<p>Year 1</p>
+		<p>Sem 2</p>
 	</div>
 	<div class="module-tile empty-module-tile">
 	</div>
@@ -31,7 +33,8 @@
 </div>
 <div class="semester" id="s3">
 	<div class="semester-head">
-		Year 2 Sem 1
+		<p>Year 2</p> 
+		<p>Sem 1</p>
 	</div>
 	<div class="module-tile empty-module-tile">
 	</div>
@@ -46,7 +49,8 @@
 </div>
 <div class="semester" id="s4">
 	<div class="semester-head">
-		Year 2 Sem 2
+		<p>Year 2</p>
+		<p>Sem 2</p>
 	</div>
 	<div class="module-tile empty-module-tile">
 	</div>
@@ -61,7 +65,8 @@
 </div>
 <div class="semester" id="s5">
 	<div class="semester-head">
-		Year 3 Sem 1
+		<p>Year 3</p> 
+		<p>Sem 1</p>
 	</div>
 	<div class="module-tile empty-module-tile">
 	</div>
@@ -76,7 +81,8 @@
 </div>
 <div class="semester" id="s6">
 	<div class="semester-head">
-		Year 3 Sem 2
+		<p>Year 3</p> 
+		<p>Sem 2</p>
 	</div>
 	<div class="module-tile empty-module-tile">
 	</div>
@@ -91,7 +97,8 @@
 </div>
 <div class="semester" id="s7">
 	<div class="semester-head">
-		Year 4 Sem 1
+		<p>Year 4</p> 
+		<p>Sem 1</p>
 	</div>
 	<div class="module-tile empty-module-tile">
 	</div>
@@ -106,7 +113,8 @@
 </div>
 <div class="semester" id="s8">
 	<div class="semester-head">
-		Year 4 Sem 2
+		<p>Year 4</p> 
+		<p>Sem 2</p>
 	</div>
 	<div class="module-tile empty-module-tile">
 	</div>
