working on faculty choices

--- a/scripts/common/views/progressBar.html
+++ b/scripts/common/views/progressBar.html
@@ -1,6 +1,9 @@
 
 <progress class="progress progress-striped progress-info" id="the-progress-bar" value="0" max="100"></progress>
 
+<div id="module-lists"> </div>
+
+
 <li class="nav-item dropdown visible-list module-list-1">
     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Lvl 1000</a>
     <div class="dropdown-menu scrollable-menu" role="menu">
