Modified Search Bar and Save Changes

--- a/scripts/common/views/moduleInfo.html
+++ b/scripts/common/views/moduleInfo.html
@@ -10,7 +10,7 @@
 	<div class="inline">
 		<div class='module-code inline'>
 			<div class="module-info-head">
-				Module Code:
+				<STRONG>Module Code:</STRONG>
 			</div>
 			<div>
 				
@@ -21,11 +21,11 @@
 		</div>
 	</div>
 	<div class='module-title'>
-		Module Title:
+		<STRONG>Module Title:</STRONG>
 	</div>
 	<div class="description-block">
 		<div class="description">
-			Description:
+			<STRONG>Description:</STRONG>
 		</div>
 		<a class="btn" id="show-more" data-popup-open="popup-description" href="#">show more</a>
 		<div class="popup" data-popup="popup-description">
@@ -37,10 +37,10 @@
 		</div>
 	</div>
 	<div class="pre-requisites">
-		Pre-requisites:
+		<STRONG>Pre-requisites:</STRONG>
 	</div>
 	<div class="preclusion">
-		Preclusions:
+		<STRONG>Preclusions:</STRONG>
 	</div>
 	<div class="add-module">
 		<button class="btn" id="add-module-button" type="button">Add</button>
