--- a/scripts/common/views/moduletable.html
+++ b/scripts/common/views/moduletable.html
@@ -4,7 +4,6 @@
 		<p>Sem 1</p>
 	</div>
 	<div class="module-tile empty-module-tile">
-		
 	</div>
 	<div class="module-tile empty-module-tile">
 	</div>
@@ -14,6 +13,7 @@
 	</div>
 	<div class="module-tile empty-module-tile">
 	</div>
+	<div class= "total-mc">MCs</div>
 </div>
 <div class="semester" id="s2">
 	<div class="semester-head">
@@ -30,6 +30,7 @@
 	</div>
 	<div class="module-tile empty-module-tile">
 	</div>
+	<div class= "total-mc">MCs</div>
 </div>
 <div class="semester" id="s3">
 	<div class="semester-head">
@@ -46,6 +47,7 @@
 	</div>
 	<div class="module-tile empty-module-tile">
 	</div>
+	<div class= "total-mc">MCs</div>
 </div>
 <div class="semester" id="s4">
 	<div class="semester-head">
@@ -62,6 +64,7 @@
 	</div>
 	<div class="module-tile empty-module-tile">
 	</div>
+	<div class= "total-mc">MCs</div>
 </div>
 <div class="semester" id="s5">
 	<div class="semester-head">
@@ -78,6 +81,7 @@
 	</div>
 	<div class="module-tile empty-module-tile">
 	</div>
+	<div class= "total-mc">MCs</div>
 </div>
 <div class="semester" id="s6">
 	<div class="semester-head">
@@ -94,6 +98,7 @@
 	</div>
 	<div class="module-tile empty-module-tile">
 	</div>
+	<div class= "total-mc">MCs</div>
 </div>
 <div class="semester" id="s7">
 	<div class="semester-head">
@@ -110,6 +115,7 @@
 	</div>
 	<div class="module-tile empty-module-tile">
 	</div>
+	<div class= "total-mc">MCs</div>
 </div>
 <div class="semester" id="s8">
 	<div class="semester-head">
@@ -126,4 +132,5 @@
 	</div>
 	<div class="module-tile empty-module-tile">
 	</div>
+	<div class= "total-mc">MCs</div>
 </div>
