display module history

--- a/scripts/common/views/moduleInfo.html
+++ b/scripts/common/views/moduleInfo.html
@@ -42,6 +42,9 @@
 	<div class="preclusion">
 		<STRONG>Preclusions:</STRONG>
 	</div>
+	<div class='history'>
+		<STRONG>History:</STRONG>
+	</div>
 	<div class="add-module">
 		<button class="btn" id="add-module-button" type="button">Add</button>
 	</div>
