--- a/styles/main.css
+++ b/styles/main.css
@@ -67,9 +67,11 @@
 	background-color: papayawhip;
 }
 
+
 #module-table {
 /*	background-color: yellow;   */
     overflow: auto;
+    width:80%;
 }
 
 .module-search-bar {
@@ -152,6 +154,7 @@
 	vertical-align:top;
 	border-radius: 10px;
 	font-family: lucida;
+    
 }
 
 .children-block {
@@ -177,7 +180,7 @@
 
 .semester {
 	height: 63px;
-    white-space: nowrap;
+    white-space:nowrap;
 }
 
 .semester-head {
