ULR for 2015 and after

--- a/styles/main.css
+++ b/styles/main.css
@@ -67,6 +67,9 @@
 	background-color: papayawhip;
 }
 
+.module-list-8 {
+    background-color: violet;
+}
 
 #module-table {
 /*	background-color: yellow;   */
