--- a/scripts/common/views/moduleInfo.html
+++ b/scripts/common/views/moduleInfo.html
@@ -1,6 +1,6 @@
 
 <div class='input-group' id='moudle-search-bar'>
-	<input type='text' class='form-control' id='module-search-bar-box' placeholder='Enter module code or module name'>
+	<input type='text' class='form-control' id='module-search-bar-box' placeholder='Enter module code here'>
 	<span class='input-group-btn'>
 		<button class='btn btn-default' id='module-search-bar-select' type='button'>Select</button>
 	</span>
