--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,4 @@
+
 #selector-head {
     background-color: white;
 }
@@ -9,6 +10,7 @@
 
 #progress-bar {
 /*	background-color: blue;*/
+    top: 15px;
 	height: 120px;
     white-space: nowrap;;
     display: inline-block;
@@ -16,25 +18,27 @@
 
 #button-area {
     /*display: inline-block;*/
+    width:100%;
 }
 
 .pogramme-selector-area select {
-    width: 400px;
+    width: 300px;
 }
 
 #the-progress-bar {
 	height: 118px;
-    width: 750px;
+    width: 850px;
 	position: absolute;
-	left: 0px;
+	left: 20px;
 	top: 0px;
 	z-index: -1;
 }
 
 .visible-list {
-	border-style: double;
+    border-radius: 8px;
 	width: 100px;
 	height: 100px;
+    left: 20px;
 	text-align: center;
 	margin-top: 9px;
 	display: inline-block;
@@ -49,61 +53,77 @@
 }
 
 .module-list-1 {
-	background-color: #DAF0FB;
+	background-color: #C5EFFD;/*#DAF0FB*/
 }
 
 .module-list-2 {
-	background-color: #B5DAEC;
+	background-color: #99CCFF;/*9BE1FB; /*#B5DAEC*/
 }
 
 .module-list-3 {
-	background-color: #7AB6D4;
+	background-color: #56BAEC; /*7AB6D4*/
 }
 
 .module-list-4 {
-	background-color: #2A90C3;
+	background-color: #3399FF;/*2A90C3;*/
 }
 
 .module-list-5 {
-	background-color: #FDF7A9;
+	background-color: #F7D708; /*FDF7A9*/
 }
 
 .module-list-6 {
-	background-color: palegreen;
+	background-color:  #9CCF31;
 }
 
 .module-list-7 {
-	background-color: darksalmon;
+	background-color: #FF9900; /*darksalmon;*/
 }
 
 .module-list-8 {
-    background-color: #E1A2FD;
+    background-color: #FFAEAE;/*E1A2FD*/
 }
 
 #module-table {
 /*	background-color: yellow;   */
     overflow: auto;
-    width:80%;
+    width:100%;
+    left: 7px;
+}
+
+.col-md-4{
+    background-color: #C3C3E5;/*#56BAEC; /*97C30A; /*#FF717E;/*#CC99FF;*/
+    width:200px;
 }
 
 .module-search-bar-box {
-	width: 300px;
+	width: 250px;
 }
 
 .logo {
-	height: 120px;
+	height: 50px;
 }
 
 #logo-image {
-	height: 120px;
+	height: 50px;
+    font:fantasy;
+    font-color: white;
+    font-weight: bold;
+    font-size:23pt;
 }
 
 #module-info {
+    /*
     border-left-width: 20px;
 	border: solid;
 	border-color: gray;
     background-color: #E7EAEC;
     border-radius: 20px;
+    */
+    left: 20px;
+    width: 90%;
+    height: 700px;
+    font-family: "Lucida" Grande;
 }
 
 .desciption-block {
@@ -172,7 +192,7 @@
 	width: 120px;
 	vertical-align:top;
 	border-radius: 10px;
-	font-family: lucida;
+	font-family: "Lucida" Grande;
     
 }
 
@@ -206,14 +226,14 @@
 	display: inline-block;
 	height: 60px;
 	width: 80px;
-	vertical-align:top;
-	border-style: solid;
-	text-align: center;
+	vertical-align: top;
+    text-align: center;
+    font-family: "Lucida" Grande;
+    font-weight: bold;
 	font-size:   13pt;
     line-height: 14pt; 
     margin-right: 15px;
-    background-color: lightgray;
-    border-color: darkgray;
+    background-color: #F1F0FF;
     border-radius: 5px;
     /*line-height: 20px;*/
 }
@@ -348,31 +368,41 @@
 /*Footer*/
 .container-fluid{
    min-height:100%;
+   font-color:white;
 }
 
 .footer-container {
   position: relative;
-  top:100px;
+  top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: #9ed1ff;
+  background-color:  #A3CBF1; /*#333333; /*#9ed1ff;*/
+  text-decoration-color: white;
+  font-color: white;
   height:200px;
   padding-top: 20px;
   padding-bottom: 15px;
 }
 
+.section-title{
+    font-color:white;
+}
+
 #copyright{
     text-align:center;
+    font-color: white;
 }
 
 #footer-link{
+    font-color: white;
     padding-left: 70px;
     text-decoration: none;
 }
 
 ul li a {
-    color: #000000;
+    font-color: white;
+    color: white;
     text-decoration:none;
 }
 
